--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Data/projectiles.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Data/projectiles.yml
@@ -352,6 +352,29 @@
     gravity: 0
     projectileSize: 2.5
     liveTime: 100
+星幻激光:
+    penetration: 99999
+    blockHitAction: thru
+    liveTime: 80
+    gravity: 0
+    projectileSize: 0.25
+    buffInflict:
+        - "幻星感染|40|1"
+星幻凝晶:
+    penetration: 99999
+    blockHitAction: thru
+    liveTime: 160
+    gravity: 0
+    projectileSize: 0.5
+    autoTrace: true
+    autoTraceMethod: 2
+    autoTraceRadius: 64
+    autoTraceSharpTurning: false
+    autoTraceAbility: 0.2
+    noAutoTraceTicks: 40
+    maxAutoTraceTicks: 100
+    buffInflict:
+        - "幻星感染|60|1"
 天蓝羽毛:
     autoTrace: true
     blastRadius: 2
