--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Data/entities.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Data/entities.yml
@@ -447,6 +447,19 @@
 深海吞食者:
     buffInflict:
         - "流血|80|1"
+石巨人:
+    buffInflict:
+        - "碎甲|160|1"
+石巨人拳头:
+    buffInflict:
+        - "碎甲|80|1"
+        - "破损盔甲|60|1"
+石巨人脚:
+    buffInflict:
+        - "碎甲|160|1"
+石巨人头:
+    buffInflict:
+        - "碎甲|80|1"
 拜月教邪教徒:
     drop:
         - "强效治疗药水:5:15:1"
