--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/projectiles.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/projectiles.yml
@@ -205,18 +205,27 @@
     blockHitAction: thru
     buffInflict:
         - "燃烧|80|1"
+    trailColor: 255|0|0
+    trailSize: 0.15
+    trailStepSize: 1
 诅咒激光:
     penetration: 99999
     gravity: 0
     blockHitAction: thru
     buffInflict:
         - "咒火|60|1"
+    trailColor: 200|255|0
+    trailSize: 0.15
+    trailStepSize: 1
 电击激光:
     penetration: 99999
     gravity: 0
     blockHitAction: thru
     buffInflict:
         - "带电|40|1"
+    trailColor: 0|255|200
+    trailSize: 0.15
+    trailStepSize: 1
 咒火球:
     buffInflict:
         - "咒火|100|1"
@@ -273,6 +282,8 @@
     gravity: 0
     projectileSize: 0.5
     trailColor: 150|0|0
+    trailSize: 1
+    trailStepSize: 2
     trailLingerTime: 10
     buffInflict:
         - "硫磺火|60|1"
@@ -371,6 +382,9 @@
     projectileSize: 0.25
     buffInflict:
         - "幻星感染|40|1"
+    trailColor: 255|50|50
+    trailSize: 0.15
+    trailStepSize: 1
 星幻凝晶:
     blockHitAction: thru
     liveTime: 160
@@ -393,6 +407,9 @@
     gravity: 0
     buffInflict:
         - "燃烧|140|1"
+    trailColor: 255|50|50
+    trailSize: 0.15
+    trailStepSize: 1
 爆裂火球:
     penetration: 99999
     projectileSize: 0.5
@@ -403,11 +420,53 @@
     blastDuration: 80
     buffInflict:
         - "燃烧|280|1"
+    trailColor: 255|50|50
+    trailSize: 0.15
+    trailStepSize: 0.5
 石巨人激光:
     penetration: 99999
     gravity: 0
     liveTime: 80
     blockHitAction: thru
+    trailColor: 255|200|50
+    trailSize: 0.15
+    trailStepSize: 0.5
+瘟疫导弹:
+    penetration: 99999
+    gravity: 0
+    liveTime: 40
+    blockHitAction: thru
+    trailColor: 50|255|150
+    trailSize: 0.15
+    trailStepSize: 1
+    isGrenade: true
+    blastRadius: 3.5
+    buffInflict:
+        - "瘟疫|60|1"
+瘟疫火箭:
+    penetration: 99999
+    gravity: 0
+    liveTime: 30
+    blockHitAction: thru
+    trailColor: 50|255|150
+    trailSize: 0.15
+    trailStepSize: 1
+    isGrenade: true
+    blastRadius: 3.5
+    buffInflict:
+        - "瘟疫|80|1"
+瘟疫核弹:
+    penetration: 99999
+    gravity: 0
+    liveTime: 20
+    blockHitAction: thru
+    trailColor: 50|255|150
+    trailSize: 0.15
+    trailStepSize: 1
+    isGrenade: true
+    blastRadius: 3.5
+    buffInflict:
+        - "瘟疫|300|1"
 天蓝羽毛:
     autoTrace: true
     blastRadius: 2
