--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/entities.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/entities.yml
@@ -481,6 +481,13 @@
         - "中毒"
         - "剧毒"
         - "瘟疫"
+光之女皇:
+    buffInflict:
+        - "神圣之火|160|1"
+    buffImmute:
+        - "燃烧"
+        - "神圣之火"
+        - "夜魇"
 拜月教邪教徒:
     drop:
         - "强效治疗药水:5:15:1"
