--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/items.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/items.yml
@@ -413,6 +413,14 @@
     regen: 2000
   worth: 20000
   rarity: 1
+测试饰品-伤害增加:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  attributes:
+    damageMulti: 5
+  worth: 20000
+  rarity: 1
 镣铐:
   item: LEASH
   lore:
