yoyo, flail and boomerang debug

--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/projectiles.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/projectiles.yml
@@ -778,26 +778,28 @@
         interval: 2
         offset: 1.0
         spawnMechanism: SURROUND
-        damageMulti: 0.65
-        speed: 0.3
+        damageMulti: 0.35
+        speed: 0.4
         spawnType: 气泡弹
 气泡弹:
     slowedByWater: false
     autoTrace: true
-    liveTime: 40
+    gravity: 0
+    liveTime: 35
 泰拉悠悠球:
     spawnProjectiles:
-        interval: 2
+        interval: 4
         offset: 0.5
         spawnMechanism: SURROUND
         damageMulti: 0.65
-        speed: 0.35
+        speed: 0.5
         spawnType: 泰拉悠悠球光束
 泰拉悠悠球光束:
     autoTrace: true
     penetration: 999999
     blockHitAction: thru
-    liveTime: 40
+    gravity: 0
+    liveTime: 25
 星云烈焰:
     gravity: 0
     autoTrace: true
